flux/apps/base/network-policies-monitoring/grafana-egress-postgres.yaml
---
# Allow Grafana to egress to PostgreSQL
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: grafana-egress-postgres
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: grafana
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cnpg-system
      podSelector:
        matchLabels:
          cnpg.io/cluster: postgres
    ports:
    - protocol: TCP
      port: 5432
